--- a/web/style.css
+++ b/web/style.css
@@ -971,6 +971,7 @@
        }
 
        & h2 {
+         color: unset;
          font-family: var(--font-display);
          font-size: 1.375rem;
          font-weight: 700;
